fixes shop z-index issue

--- a/sass/routes/_shop.scss
+++ b/sass/routes/_shop.scss
@@ -6,7 +6,6 @@
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: 2;
 
     .product-details {
       position: absolute;
@@ -32,6 +31,7 @@
         position: fixed;
         transition: 250ms ease-in-out;
         display: none;
+        z-index: 3;
       }
 
       &.in-view {
